<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginVertical="5dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_room_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/room_title"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_user_img"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/icons8_monkey_164"
        app:civ_circle_background_color="?colorPrimary"
        android:layout_below="@+id/tv_room_title"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_alignTop="@+id/civ_user_img"
        android:layout_toEndOf="@+id/civ_user_img"
        android:layout_marginStart="6dp"/>
    
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_write_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_date"
        android:textColor="@color/gray"
        android:layout_alignBottom="@+id/tv_nickname"
        android:layout_toEndOf="@+id/tv_nickname"
        android:layout_marginStart="12dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_example"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_alignStart="@+id/tv_nickname"
        android:layout_below="@+id/tv_nickname"/>

</RelativeLayout>