<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RoomSettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?colorPrimary"
        app:navigationIcon="@drawable/ic_cancel"
        app:title="@string/tb_actRS_title"
        app:titleTextColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_actRS_set_title"
        android:textSize="22sp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_room_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_actRS_set_title"
        android:inputType="text"
        android:backgroundTint="@color/black"
        android:layout_marginHorizontal="26dp"
        android:layout_marginTop="8dp"
        android:imeOptions="actionDone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="30dp"
        android:gravity="center_vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tv_actRS_noti"
            android:textSize="22sp"/>
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_noti_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>