<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimaryVariant"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_room_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/room_title"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?colorPrimary"
            android:gravity="center_horizontal"
            android:padding="6dp"
            android:text="@string/btn_panelE_search"
            android:textColor="@color/transparent_white"
            app:drawableTopCompat="@drawable/ic_search_24" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_noti"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?colorPrimary"
            android:gravity="center_horizontal"
            android:padding="6dp"
            android:text="@string/btn_panelE_noti"
            android:textColor="@color/transparent_white"
            app:drawableTopCompat="@drawable/ic_notifications_24" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn_room_setting"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?colorPrimary"
            android:gravity="center_horizontal"
            android:padding="6dp"
            android:text="@string/btn_panelE_room_setting"
            android:textColor="@color/transparent_white"
            app:drawableTopCompat="@drawable/ic_room_setting_24" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_show_bs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_circleimageview"
            android:backgroundTint="@color/black"
            android:scaleType="center"
            android:src="@drawable/ic_find_friend" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/btn_panelE_invite"
            android:textSize="20sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_panel_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


</LinearLayout>